<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundFrame">

    <TextView
        android:id="@+id/tvNamaApp"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/bar"
        android:fontFamily="@font/poppins_extrabold"
        android:paddingTop="19dp"
        android:text="@string/dip_tech_store_d"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="23sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:background="@color/bar"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/ghalib_pradipa_task5"
        android:textSize="15sp"
        android:textColor="@color/white"
        android:gravity="center"
        android:paddingBottom="18dp"
        app:layout_constraintTop_toBottomOf="@id/tvNamaApp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvDetailNama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:text= "@string/name_d"
        android:textColor="@color/text"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_marginTop="80dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvNamaApp" />

    <TextView
        android:id="@+id/tvDetailMembership"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/membership_pembeli"
        android:textColor="@color/text"
        android:textSize="14sp"
        android:layout_marginTop="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDetailNama" />

    <TextView
        android:id="@+id/tvTransaksi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detail_transaksi"
        android:textColor="@color/text"
        android:textSize="15sp"
        android:textStyle="bold"
        android:fontFamily="@font/poppins_medium"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDetailMembership" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cvDeskripsiTransaksi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:foregroundGravity="center"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:cardBackgroundColor="@color/card"
        app:layout_constraintTop_toBottomOf="@id/tvTransaksi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp"
            android:paddingStart="30dp"
            android:paddingEnd="35dp">

            <TextView
                android:id="@+id/tvKodeBarang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/item_code_d"
                android:textColor="@color/text"
                android:textSize="14sp"
                />

            <TextView
                android:id="@+id/tvNamaBarang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/item_name"
                android:textColor="@color/text"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/tvHarga"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/price"
                android:textColor="@color/text"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/tvTotalHarga"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/total_price"
                android:textColor="@color/text"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tvDiskon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/discount"
                android:textColor="@color/text"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/tvDiskonMember"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/member_discount"
                android:textColor="@color/text"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/tvJumlahBayar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/total_payment"
                android:textColor="@color/text"
                android:textSize="14sp"
                android:textStyle="bold"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tvOutro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/thanks_outro"
        android:textColor="@color/text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cvDeskripsiTransaksi"/>

    <Button
        android:id="@+id/btnShare"
        android:layout_width="wrap_content"
        android:layout_height="58dp"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:backgroundTint="@color/button1"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/share"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvOutro"/>

</androidx.constraintlayout.widget.ConstraintLayout>



